charts/synology/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synology
spec:
  type: ExternalName
  externalName: 172.16.10.10
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
