charts/synology/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synology
spec:
  hostnames:
  - synology.g4v.dev
  parentRefs:
  - name: internal
    namespace: envoy-gateway-system
  rules:
  - backendRefs:
    - name: synology
      port: 5000
    matches:
    - path:
        type: PathPrefix
        value: /
