charts/synology/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synology
spec:
  rules:
  - host: synology.g4v.dev
    http:
      paths:
      - backend:
          service:
            name: synology
            port:
              number: 5000
        path: /
        pathType: ImplementationSpecific
